nobase_dist_include_HEADERS = libinsn/insn.hpp \
															libinsn/arm64.hpp \
															libinsn/arm32.hpp \
															libinsn/arm32/arm32_insn.hpp \
															libinsn/arm32/arm32_arm.hpp \
															libinsn/arm32/arm32_thumb.hpp \
															libinsn/INSNexception.hpp \
															libinsn/vmem.hpp
